--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
     
     <script>
         // CSV URL
-        const csvUrl = "https://docs.google.com/spreadsheets/d/e/2PACX-1vSYKfT03Rf95K3lXJf1n20H2aLietUGI0wjFdC21AusbFEVcsT61-BR4v_s3Na9YLcpCIxyWuyOW-uF/pub?gid=813367910&single=true&output=csv";
+        const csvUrl = "https://docs.google.com/spreadsheets/d/1phZPRcTJqNiwCGaDWGS-VxSsojiPrPzQPDcoIRHqgWw/export?format=csv&gid=813367910";
         
         // CORS Proxy URL as fallback
         const corsProxyUrl = "https://api.allorigins.win/raw?url=";
